
Summary of important user-visible changes for releases of the control package

===============================================================================
control-4.2.1+  Upcoming version 4.2.2, not yet released
===============================================================================

**

===============================================================================
control-4.2.1  Release date 2026-01-20
===============================================================================

** fix installing when mkoctfile has spaces in its path

** fix error introduced in release 4.2.0 in computing the frequncey
   response for tf systems

===============================================================================
control-4.2.0  Release date 2026-01-16
===============================================================================

** from Octave 11 on, the control package documentation is included
   into the documentation browser of the GUI when the package is loaded

** pade: new function for pade approximation of time delays by poles 
   and zeros

** bdschur: new function for block diagonalization of a matrix using
   SLICOT routine MB03RD

** nichols: grid with contours of constant close-loop magnitude and phase

** bode: legend, title and similar commands after a bode plot are now
   affecting the first plot (magnitude), not the second (bug #67490)

** bode/margin: improved handling of poles and zeros on imaginary axis,
   more robust computation of the phase (bug #63393, bug #61355)

** allow real-valued gain matrix as input for system data access functions
   like tfdata, ssdata etc. which is then interpreted as static-gain system
   (bug #58648)

===============================================================================
control-4.1.3  Release date 2025-09-10
===============================================================================

** tf: Improve accuracy of transfer function from state space models